--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
         "express": "^5.1.0",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.14.0"
+        "mongodb": "^6.16.0",
+        "mongoose": "^8.14.0",
+        "zod": "^3.24.3"
     }
 }
